<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data class="LoginActivityBinding">

        <variable
            name="viewModel"
            type="com.jaydip.mvvmdemo.ui.login.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.login.LoginActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/actLoginClHeader"
            android:layout_width="match_parent"
            android:layout_height="?android:actionBarSize"
            android:background="@color/colorHeader"
            android:elevation="@dimen/_2sdp"
            android:paddingStart="@dimen/_15sdp"
            android:paddingEnd="@dimen/_15sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/actLoginTvHeader"
                style="@style/TextViewMediumLargeBlack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:gravity="start"
                android:maxLines="1"
                android:text="@string/str_hello"
                android:textSize="@dimen/_18ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/actLoginClContent"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:padding="@dimen/_5sdp"
            app:layout_constraintBottom_toTopOf="@+id/actLoginBtnLogin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/actLoginClHeader">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true"
                android:scrollbars="none">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/actLoginIvLogin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_16sdp"
                        android:layout_marginBottom="@dimen/_16sdp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.0"
                        app:srcCompat="@drawable/ic_package_delivered" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/actLoginTvLogin"
                        style="@style/TextViewMediumLargeTheme"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:gravity="center"
                        android:text="@string/str_login"
                        android:textSize="@dimen/_24ssp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/actLoginIvLogin" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/actLoginTilMobile"
                        style="@style/Widget.Design.TextInputLayout"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:layout_marginTop="@dimen/_30sdp"
                        app:errorIconDrawable="@null"
                        app:errorTextColor="@color/textError"
                        app:hintTextColor="@color/textHint"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/actLoginTvLogin">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/actLoginEtMobile"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto"
                            android:hint="@string/str_mobile_number"
                            android:inputType="number"
                            android:maxLength="10"
                            android:maxLines="1"
                            android:paddingTop="@dimen/_5sdp"
                            android:paddingBottom="@dimen/_10sdp"
                            android:textColor="@color/colorCalDay"
                            android:textColorHint="@color/textHint"
                            android:textSize="@dimen/_12ssp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/actLoginTvOtpNo"
                        style="@style/TextViewSmallBlack"
                        android:layout_width="0dp"
                        android:visibility="gone"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:text="@string/enter_otp_sent_on_mobile"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/actLoginTilMobile" />

                    <!--                    <in.aabhasjindal.otptextview.OtpTextView-->
                    <!--                        android:id="@+id/otp_view"-->
                    <!--                        android:layout_width="wrap_content"-->
                    <!--                        android:layout_height="wrap_content"-->
                    <!--                        android:textColor="@color/colorCalDay"-->
                    <!--                        app:bar_enabled="false"-->
                    <!--                        app:bar_height="2dp"-->
                    <!--                        app:height="40dp"-->
                    <!--                        app:layout_constraintStart_toStartOf="parent"-->
                    <!--                        app:layout_constraintTop_toBottomOf="@+id/actLoginTvOtpNo"-->
                    <!--                        app:length="4"-->
                    <!--                        app:otp_text_size="@dimen/_14ssp"-->
                    <!--                        app:width="40dp" />-->
                    <com.jaydip.mvvmdemo.view.Pinview
                        android:id="@+id/actLoginPinView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_2sdp"
                        app:cursorVisible="false"
                        app:forceKeyboard="false"
                        app:inputType="number"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/actLoginTvOtpNo"
                        app:password="false"
                        app:pinHeight="@dimen/_40sdp"
                        android:visibility="gone"
                        app:pinLength="4"
                        app:pinWidth="@dimen/_40sdp"
                        app:textSize="@dimen/_12ssp" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </ScrollView>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
            android:id="@+id/actLoginBtnLogin"
            style="@style/styleLoginBtn"
            android:layout_width="0dp"
            android:layout_marginTop="@dimen/_16sdp"
            android:text="@string/btn_log_in"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:spinning_bar_color="#FFF"
            app:spinning_bar_padding="6dp"
            app:spinning_bar_width="4dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
